# tiny-onnxRT

./: CMakeLists.txt  README.md
docs/: todo.md
src/compiler/: pass.h
src/graph/: graph.h  node.h  tensor.h
src/kernels/: add.cpp  matmul.cpp  relu.cpp  softmax.cpp
src/onnx_parser/: onnx_parser.cpp  onnx_parser.h
src/planner/: execution_plan.h  planner.cpp
src/runtime/: dispatch.cpp  dispatch.h  kernel_registry.cpp  kernel_registry.h  memory_arena.cpp  memory_arena.h  profiler.cpp  profiler.h  session.cpp  session.h
tests/: test_e2e.cpp  test_parser.cpp  test_planner.cpp  test_runtime.cpp
